# StageTwo-Bootloader-for-GenesisOS

./: .gitignore  AGENTS.md  CMakeLists.txt  DEV_NOTES.md  README.md  TODO.md  sdkconfig.defaults
LegacyCode/: README.md
LegacyCode/genesisos_root/: genesis_boot.c  genesis_boot_menu.c
components/genesis_display/: CMakeLists.txt  genesis_display.cpp  sh8601_ws_cfg.c
components/genesis_sdcard/: CMakeLists.txt  genesis_sdcard.cpp
components/genesis_theme/: CMakeLists.txt  genesis_theme.cpp
components/genesis_touch/: CMakeLists.txt  genesis_touch.cpp
components/stage2_backup/: CMakeLists.txt  stage2_backup.cpp
components/stage2_boot/: CMakeLists.txt  stage2_boot.cpp
components/stage2_fs/: CMakeLists.txt  stage2_fs.cpp
components/stage2_image/: CMakeLists.txt  stage2_image.cpp
components/stage2_input/: CMakeLists.txt  stage2_input.cpp
components/stage2_logging/: CMakeLists.txt  stage2_logging.cpp
components/stage2_manifest/: CMakeLists.txt  stage2_manifest.cpp
components/stage2_nvs/: CMakeLists.txt  CMakeLists.txtZone.Identifier  stage2_nvs.cpp
components/stage2_ota/: CMakeLists.txt  stage2_ota.cpp
components/stage2_recovery/: CMakeLists.txt  stage2_recovery.cpp
components/stage2_repair/: CMakeLists.txt  stage2_repair.cpp
components/stage2_repartition/: CMakeLists.txt  stage2_repartition.cpp
components/stage2_ui/: CMakeLists.txt  stage2_ui.cpp
components/stage2_ui/include/: stage2_ui.hpp
main/: CMakeLists.txt  app_main.cpp  idf_component.yml
partitions/: genesis_stage2_partitions.csv
tools/: flash_commands.md
(+28 files in other folders)
